<resources>
    <string name="app_name">PitjarusTestApp</string>
    <string name="background_image">Background Image</string>
    <string name="username">Naufan Irfanda</string>
    <string name="role_manager">Role : Manager</string>
    <string name="nik">NIK : MD00001</string>
    <string name="statistic_title">Kunjungan Pada Bulan Januari 2023</string>
    <string name="total_store">Total Store</string>
    <string name="actual_store">Actual Store</string>
    <string name="percentage">Percentage</string>
    <string name="menu">Menu</string>
    <string name="button_kunjungan">Button Kunjungan</string>
    <string name="kunjungan">Kunjungan</string>
    <string name="button_target">Button Target</string>
    <string name="target">Target Install CDFDPC</string>
    <string name="button_dashboard">Button Dashboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="button_history">Button History</string>
    <string name="history">Transmission History</string>
    <string name="button_logout">Button Logout</string>
    <string name="logout">Logout</string>
    <string name="title_activity_list_store">Daftar Toko</string>
    <string name="daftar_kunjungan">Daftar Kunjungan</string>
    <string name="copyright">Copyright © 2023 Naufan Irfanda. All rights reserved.</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username1">Username</string>
    <string name="login1">Login</string>
    <string name="visit">Visit</string>
    <string name="navigate">Navigate</string>
    <string name="e_merchandising">E-Merchandising : Yes</string>
    <string name="pareto">Pareto : Yes</string>
    <string name="ertm">ERTM : Yes</string>
    <string name="pindai_lokasi">Pindai lokasi</string>
    <string name="lokasi_anda">Lokasi Anda :</string>
    <string name="verified">Verified</string>
</resources>