<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBlue_100"
    android:scrollbarThumbVertical="@null"
    tools:context=".home.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--IMAGE BACKGROUND-->
        <ImageView
            android:id="@+id/bg_cover"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/home_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/background_image" />

        <!--PROFILE PICTURE-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/user"
            app:civ_border_color="@color/grey_100"
            app:civ_border_width="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--NAME-->
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/username"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <!--ROLE-->
        <TextView
            android:id="@+id/tv_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/role_manager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <!--NIK-->
        <TextView
            android:id="@+id/tv_nik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="@string/nik"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_role" />

        <!--CARD VIEW: STATISTIC-->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_statistic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nik" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <!--TITLE CARD VIEW-->
                <TextView
                    android:id="@+id/tv_card_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic_title"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--SCORE COUNTER-->
                <TextView
                    android:id="@+id/tv_card_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="200"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_card_actual"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_card_actual" />

                <!--SCORE TITLE-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:text="@string/total_store"
                    app:layout_constraintEnd_toEndOf="@+id/tv_card_total"
                    app:layout_constraintStart_toStartOf="@+id/tv_card_total"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_total" />

                <!--ACTUAL SCORE COUNTER-->
                <TextView
                    android:id="@+id/tv_card_actual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="150"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_title" />

                <!--COUNTER TITLE-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/actual_store"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_card_title"
                    app:layout_constraintStart_toStartOf="@+id/tv_card_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_actual" />

                <!--PERCENTAGE COUNTER-->
                <TextView
                    android:id="@+id/tv_card_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="70%"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_card_total"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_card_total" />

                <!--PERCENTAGE TITLE-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/percentage"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_card_percentage"
                    app:layout_constraintStart_toStartOf="@+id/tv_card_percentage"
                    app:layout_constraintTop_toBottomOf="@+id/tv_card_percentage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!--CARD VIEW: MENU-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/card_statistic" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <!--TITLE CARD VIEW-->
                <TextView
                    android:id="@+id/tv_menu_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--BUTTON VISIT-->
                <ImageButton
                    android:id="@+id/btn_visit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/bg_button_oval"
                    android:scaleType="fitXY"
                    android:src="@drawable/visit"
                    app:layout_constraintEnd_toEndOf="@+id/textView1"
                    app:layout_constraintStart_toStartOf="@+id/textView1"
                    app:layout_constraintTop_toBottomOf="@+id/tv_menu_title"
                    android:contentDescription="@string/button_kunjungan" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/kunjungan"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_visit" />

                <!--BUTTON TARGET-->
                <ImageButton
                    android:id="@+id/btn_target"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/bg_button_oval"
                    android:scaleType="fitXY"
                    android:src="@drawable/target"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/btn_visit"
                    android:contentDescription="@string/button_target" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/target"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView1"
                    app:layout_constraintTop_toTopOf="@+id/textView1" />

                <!--BUTTON DASHBOARD-->
                <ImageButton
                    android:id="@+id/btn_dashboard"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/bg_button_oval"
                    android:scaleType="fitXY"
                    android:src="@drawable/dashboard"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/btn_target"
                    android:contentDescription="@string/button_dashboard" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/dashboard"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <!--BUTTON HISTORY-->
                <ImageButton
                    android:id="@+id/btn_history"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/bg_button_oval"
                    android:scaleType="fitXY"
                    android:src="@drawable/history"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/textView1"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    android:contentDescription="@string/button_history" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/history"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_history"
                    app:layout_constraintStart_toStartOf="@+id/btn_history"
                    app:layout_constraintTop_toBottomOf="@+id/btn_history" />

                <!--BUTTON LOGOUT-->
                <ImageButton
                    android:id="@+id/btn_logout"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/bg_button_oval"
                    android:scaleType="fitXY"
                    android:src="@drawable/logout"
                    app:layout_constraintEnd_toStartOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/btn_history"
                    android:contentDescription="@string/button_logout" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_logout"
                    app:layout_constraintStart_toStartOf="@+id/btn_logout"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>