<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@null"
    tools:context=".storedetail.StoreDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--STORE PICTURE-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@color/white"
            android:src="@drawable/add_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <!--STORE DETAIL-->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_store_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_my_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="30sp"
                    android:text="@string/lokasi_anda"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_find_myloc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pindai_lokasi"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_my_location" />

                <TextView
                    android:id="@+id/tv_store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    tools:text="Toko B"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_store"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_find_myloc" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="Jl.Pal Merah No 25, Jakarta Barat"
                    android:height="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_store_name" />

                <TextView
                    android:id="@+id/tv_outlet_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Tipe Outlet : Supermarket"
                    android:height="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_address" />

                <TextView
                    android:id="@+id/tv_display_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="30sp"
                    tools:text="Tipe Display : Grosir"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_outlet_type" />

                <TextView
                    android:id="@+id/tv_sub_display_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="30sp"
                    tools:text="Sub Tipe Display : Garmen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_display_type" />

                <TextView
                    android:id="@+id/tv_ertm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="30sp"
                    android:text="@string/ertm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sub_display_type" />

                <TextView
                    android:id="@+id/tv_pareto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="30sp"
                    android:text="@string/pareto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ertm" />

                <TextView
                    android:id="@+id/tv_merchandising"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="30sp"
                    android:text="@string/e_merchandising"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pareto" />

                <TextView
                    android:id="@+id/tv_last_visit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:text="Last Visit : 24 September 2022"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_merchandising" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!--BOTTOM ACTION BUTTON-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:paddingVertical="8dp"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_store_detail">

            <Button
                android:id="@+id/btn_navigate"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/navigate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_visit"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:text="@string/visit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>